--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,5 +1,5 @@
 server:
-  name: go-subscription
+  name: go-rabbit-mq-sample
   port: 8080
 
 log:
@@ -19,15 +19,10 @@ retry:
   key: key
 
 consumer:
-  rabbitmq:
-    url:  amqp://guest:guest@localhost:5672/
-    exchange_name: test
-    exchange_kind: fanout
-    auto_delete: false
-  retry:
-    retry_count_name: retry
-    limit_retry: 3
-    goroutines: false
+  url:  amqp://guest:guest@localhost:5672/
+  exchange_name: test
+  exchange_kind: fanout
+  auto_delete: false
 
 publisher:
   url: amqp://guest:guest@localhost:5672/
@@ -35,4 +30,3 @@ publisher:
   exchange_kind: fanout
   auto_delete: false
   content_type: text/plain
-
